Fixed text squishing on homepage,
copy to clipboard buttons work as intended

--- a/bootstrap-5.0.0-beta2-dist/css/stylesheet.css
+++ b/bootstrap-5.0.0-beta2-dist/css/stylesheet.css
@@ -15,3 +15,7 @@ button {
     
     color: inherit; /* For Example */
 }
+
+.bg-darklight{
+    background-color: #343a40;
+}
